<resources>
    <string name="app_name">Help.me</string>
    <string name="helpme">Help Me!</string>
    <string name="selectTopic">Select a Topic</string>
    <string name="notes">Notes</string>
    <string name="attachPhoto">Attach Photo</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="timeInfo">Until when is this request valid?</string>
    <string name="confirm">Confirm and Get Help</string>

    <!-- LocationActivity -->
    <string name="sign_in_menu_item">Sign In</string>
    <string name="sign_out_menu_item">Sign Out</string>
    <string name="signed_out_toast">Signed out</string>
    <string name="already_signed_out_toast">Already signed out</string>
    <string name="already_signed_in_toast">Already signed in as</string>
    <string name="edit_filters_menu_item">Edit Filters</string>
    <string name="request_help">Help Me</string>
    <string name="user_not_logged_in">You are not logged in</string>
    <string name="refresh_map">Refresh Map</string>
    <string name="refreshing_data_now">Refreshing data now...</string>

    <!-- EditFiltersActivity -->
    <string name="edit_filter_new_filter_default_text">New Filter Item</string>
    <string name="edit_filter_edit_dialog_title">Modify Filter</string>
    <string name="edit_filter_remove_filter_text">Remove</string>
    <string name="edit_filter_save_filter_text">Save</string>
    <string name="edit_filter_add_item">Add...</string>
    <string name="edit_filter_save_filters">Save Filters</string>
    <string name="btn_study_groups">Study Groups</string>
</resources>
